@@ -53,8 +53,7 @@ class Vector2:
         return '[{}, {}]'.format(self._x, self._y)
 
     def __repr__(self):
-        return '<{}({}, {})>'.format(self.__class__.__name__,
-                                     self._x, self._y)
+        return '<{}({}, {})>'.format(self.__class__.__name__, self._x, self._y)
 
     def __getitem__(self, index):
         if index in (0, -2):
@@ -158,7 +157,7 @@ class Vector2:
         mag = self.magnitude()
         if mag == 0:
             raise ValueError('Cannot normalize vector of zero length')
-        return Vector2(self._x / mag, self._y / mag)
+        return self.__class__(self._x / mag, self._y / mag)
 
     def normalize_ip(self):
         """
@@ -203,8 +202,8 @@ class Vector2:
         if nn == 0:
             raise ValueError('Cannot reflect from normal of zero length')
         c = 2 * vn / nn
-        return Vector2(self._x - (vector_x * c),
-                       self._y - (vector_y * c))
+        return self.__class__(self._x - (vector_x * c),
+                              self._y - (vector_y * c))
 
     def reflect_ip(self, vector):
         """
@@ -254,11 +253,11 @@ class Vector2:
         if t < 0.0 or t > 1.0:
             raise ValueError('Argument t must be in range 0 to 1')
         if hasattr(vector, '_x'):
-            return Vector2(self._x * (1-t) + vector._x * t,
-                           self._y * (1-t) + vector._y * t)
+            return self.__class__(self._x * (1-t) + vector._x * t,
+                                  self._y * (1-t) + vector._y * t)
         else:
-            return Vector2(self._x * (1-t) + vector[0] * t,
-                           self._y * (1-t) + vector[1] * t)
+            return self.__class__(self._x * (1-t) + vector[0] * t,
+                                  self._y * (1-t) + vector[1] * t)
 
     def slerp(self, vector, t):
         """
@@ -296,8 +295,8 @@ class Vector2:
         else:
             a = 1.0
             b = 0.0
-        v = Vector2((sx * a) + (vx * b),
-                    (sy * a) + (vy * b))
+        v = self.__class__((sx * a) + (vx * b),
+                           (sy * a) + (vy * b))
         smag = ((1.0-t) * smag) + (t * vmag)
         v.x *= smag
         v.y *= smag
@@ -316,8 +315,8 @@ class Vector2:
         rad = angle / 180.0 * pi
         c = round(cos(rad), 6)
         s = round(sin(rad), 6)
-        return Vector2((c * self._x) - (s * self._y),
-                       (s * self._x) + (c * self._y))
+        return self.__class__((c * self._x) - (s * self._y),
+                              (s * self._x) + (c * self._y))
 
     def rotate_rad(self, angle):
         """
@@ -325,8 +324,8 @@ class Vector2:
         """
         c = cos(angle)
         s = sin(angle)
-        return Vector2((c * self._x) - (s * self._y),
-                       (s * self._x) + (c * self._y))
+        return self.__class__((c * self._x) - (s * self._y),
+                              (s * self._x) + (c * self._y))
 
     def rotate_ip(self, angle):
         """
@@ -388,7 +387,7 @@ class Vector2:
         """
         Return copy of vector.
         """
-        return Vector2(self._x, self._y)
+        return self.__class__(self._x, self._y)
 
     def update(self, x=None, y=None):
         """
@@ -405,24 +404,24 @@ class Vector2:
             self._y = 0.0
 
     def __pos__(self):
-        return Vector2(self._x, self._y)
+        return self.__class__(self._x, self._y)
 
     def __neg__(self):
-        return Vector2(-self._x, -self._y)
+        return self.__class__(-self._x, -self._y)
 
     def __add__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(self._x + other._x, self._y + other._y)
+            return self.__class__(self._x + other._x, self._y + other._y)
         elif hasattr(other, '__iter__'):
-            return Vector2(self._x + other[0], self._y + other[1])    # __:opov
+            return self.__class__(self._x + other[0], self._y + other[1])    # __:opov
         else:
             raise TypeError('unsupported operand')
 
     def __sub__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(self._x - other._x, self._y - other._y)
+            return self.__class__(self._x - other._x, self._y - other._y)
         elif hasattr(other, '__iter__'):
-            return Vector2(self._x - other[0], self._y - other[1])    # __:opov
+            return self.__class__(self._x - other[0], self._y - other[1])    # __:opov
         else:
             raise TypeError('unsupported operand')
 
@@ -433,42 +432,42 @@ class Vector2:
             if not hasattr(other, '_v'):
                 return (self._x * other[0]) + (self._y * other[1])
             else:
-                return Vector2(self._x * other[0], self._y * other[1])    # __:opov
+                return self.__class__(self._x * other[0], self._y * other[1])    # __:opov
         else:
-            return Vector2(self._x * other, self._y * other)
+            return self.__class__(self._x * other, self._y * other)
 
     def __div__(self, other):
         if hasattr(other, '_x'):
             raise TypeError('unsupported operand')
         elif hasattr(other, '__iter__'):
             if not hasattr(other, '_v'):
-                return Vector2(self._x / other[0], self._y / other[1])
+                return self.__class__(self._x / other[0], self._y / other[1])
             else:
-                return Vector2(self._x / other[0], self._y / other[1])    # __:opov
+                return self.__class__(self._x / other[0], self._y / other[1])    # __:opov
         else:
-            return Vector2(self._x / other, self._y / other)
+            return self.__class__(self._x / other, self._y / other)
 
     def __truediv__(self, other):
         if hasattr(other, '_x'):
             raise TypeError('unsupported operand')
         elif hasattr(other, '__iter__'):
             if not hasattr(other, '_v'):
-                return Vector2(self._x / other[0], self._y / other[1])
+                return self.__class__(self._x / other[0], self._y / other[1])
             else:
-                return Vector2(self._x / other[0], self._y / other[1])    # __:opov
+                return self.__class__(self._x / other[0], self._y / other[1])    # __:opov
         else:
-            return Vector2(self._x / other, self._y / other)
+            return self.__class__(self._x / other, self._y / other)
 
     def __floordiv__(self, other):
         if hasattr(other, '_x'):
             raise TypeError('unsupported operand')
         elif hasattr(other, '__iter__'):
             if not hasattr(other, '_v'):
-                return Vector2(floor(self._x/other[0]), floor(self._y/other[1]))
+                return self.__class__(floor(self._x/other[0]), floor(self._y/other[1]))
             else:
-                return Vector2(floor(self._x/other[0]), floor(self._y/other[1]))    # __:opov
+                return self.__class__(floor(self._x/other[0]), floor(self._y/other[1]))    # __:opov
         else:
-            return Vector2(floor(self._x/other), floor(self._y/other))
+            return self.__class__(floor(self._x/other), floor(self._y/other))
 
     def __eq__(self, other):
         if hasattr(other, '_x'):
@@ -516,13 +515,13 @@ class Vector2:
 
     def __radd__(self, other):
         if hasattr(other, '__iter__'):
-            return Vector2(self._x + other[0], self._y + other[1])
+            return self.__class__(self._x + other[0], self._y + other[1])
         else:
             raise TypeError('unsupported operand')
 
     def __rsub__(self, other):
         if hasattr(other, '__iter__'):
-            return Vector2(other[0] - self._x, other[1] - self._y)
+            return self.__class__(other[0] - self._x, other[1] - self._y)
         else:
             raise TypeError('unsupported operand')
 
@@ -530,25 +529,25 @@ class Vector2:
         if hasattr(other, '__iter__'):
             return (self._x * other[0]) + (self._y * other[1])
         else:
-            return Vector2(self._x * other, self._y * other)
+            return self.__class__(self._x * other, self._y * other)
 
     def __rdiv__(self, other):
         if not hasattr(other, '_v'):
             raise TypeError('unsupported operand')
         else:
-            return Vector2(other[0] / self._x, other[1] / self._y)
+            return self.__class__(other[0] / self._x, other[1] / self._y)
 
     def __rtruediv__(self, other):
         if not hasattr(other, '_v'):
             raise TypeError('unsupported operand')
         else:
-            return Vector2(other[0] / self._x, other[1] / self._y)
+            return self.__class__(other[0] / self._x, other[1] / self._y)
 
     def __rfloordiv__(self, other):
         if not hasattr(other, '_v'):
             raise TypeError('unsupported operand')
         else:
-            return Vector2(floor(other[0]/self._x), floor(other[1]/self._y))
+            return self.__class__(floor(other[0]/self._x), floor(other[1]/self._y))
 
     def __iadd__(self, other):
         if hasattr(other, '_x'):
@@ -634,6 +633,12 @@ class VectorElementwiseProxy:
     def __init__(self, vector):
         self._v = vector
 
+    def __str__(self):
+        return '<{} object>'.format(self.__class__.__name__)
+
+    def __repr__(self):
+        return '<{} object>'.format(self.__class__.__name__)
+
     def __getitem__(self, index):
         if index in (0, -2):
             return self._v._x
@@ -654,88 +659,88 @@ class VectorElementwiseProxy:
         return bool(self._v._x or self._v._y)
 
     def __pos__(self):
-        return Vector2(self._v._x, self._v._y)
+        return self._v.__class__(self._v._x, self._v._y)
 
     def __neg__(self):
-        return Vector2(-self._v._x, -self._v._y)
+        return self._v.__class__(-self._v._x, -self._v._y)
 
     def __abs__(self):
         return (abs(self._v._x), abs(self._v._y))
 
     def __add__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(self._v._x + other._x, self._v._y + other._y)
+            return self._v.__class__(self._v._x + other._x, self._v._y + other._y)
         elif hasattr(other, '__iter__'):
-            return Vector2(self._v._x + other[0], self._v._y + other[1])    # __:opov
+            return self._v.__class__(self._v._x + other[0], self._v._y + other[1])    # __:opov
         else:
-            return Vector2(self._v._x + other, self._v._y + other)
+            return self._v.__class__(self._v._x + other, self._v._y + other)
 
     def __sub__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(self._v._x - other._x, self._v._y - other._y)
+            return self._v.__class__(self._v._x - other._x, self._v._y - other._y)
         elif hasattr(other, '__iter__'):
-            return Vector2(self._v._x - other[0], self._v._y - other[1])    # __:opov
+            return self._v.__class__(self._v._x - other[0], self._v._y - other[1])    # __:opov
         else:
-            return Vector2(self._v._x - other, self._v._y - other)
+            return self._v.__class__(self._v._x - other, self._v._y - other)
 
     def __mul__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(self._v._x * other._x, self._v._y * other._y)
+            return self._v.__class__(self._v._x * other._x, self._v._y * other._y)
         elif hasattr(other, '__iter__'):
-            return Vector2(self._v._x * other[0], self._v._y * other[1])    # __:opov
+            return self._v.__class__(self._v._x * other[0], self._v._y * other[1])    # __:opov
         else:
-            return Vector2(self._v._x * other, self._v._y * other)
+            return self._v.__class__(self._v._x * other, self._v._y * other)
 
     def __div__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(self._v._x / other._x, self._v._y / other._y)
+            return self._v.__class__(self._v._x / other._x, self._v._y / other._y)
         elif hasattr(other, '__iter__'):
-            return Vector2(self._v._x / other[0], self._v._y / other[1])    # __:opov
+            return self._v.__class__(self._v._x / other[0], self._v._y / other[1])    # __:opov
         else:
-            return Vector2(self._v._x / other, self._v._y / other)
+            return self._v.__class__(self._v._x / other, self._v._y / other)
 
     def __truediv__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(self._v._x / other._x, self._v._y / other._y)
+            return self._v.__class__(self._v._x / other._x, self._v._y / other._y)
         elif hasattr(other, '__iter__'):
-            return Vector2(self._v._x / other[0], self._v._y / other[1])    # __:opov
+            return self._v.__class__(self._v._x / other[0], self._v._y / other[1])    # __:opov
         else:
-            return Vector2(self._v._x / other, self._v._y / other)
+            return self._v.__class__(self._v._x / other, self._v._y / other)
 
     def __floordiv__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(floor(self._v._x/other._x), floor(self._v._y/other._y))
+            return self._v.__class__(floor(self._v._x/other._x), floor(self._v._y/other._y))
         elif hasattr(other, '__iter__'):
-            return Vector2(floor(self._v._x/other[0]), floor(self._v._y/other[1]))    # __:opov
+            return self._v.__class__(floor(self._v._x/other[0]), floor(self._v._y/other[1]))    # __:opov
         else:
-            return Vector2(floor(self._v._x/other), floor(self._v._y/other))
+            return self._v.__class__(floor(self._v._x/other), floor(self._v._y/other))
 
     def __pow__(self, other):
         if hasattr(other, '_x'):
             if (other._x%1 and self._v._x<0) or (other._y%1 and self._v._y<0):
                 raise ValueError(
                     'negative number cannot be raised to a fractional power')
-            return Vector2(self._v._x ** other._x, self._v._y ** other._y)
+            return self._v.__class__(self._v._x ** other._x, self._v._y ** other._y)
         elif hasattr(other, '__iter__'):
             # __pragma__ ('opov')
             if (other[0]%1 and self._v._x<0) or (other[1]%1 and self._v._y<0):
                 raise ValueError(
                     'negative number cannot be raised to a fractional power')
-            return Vector2(self._v._x ** other[0], self._v._y ** other[1])
+            return self._v.__class__(self._v._x ** other[0], self._v._y ** other[1])
             # __pragma__ ('noopov')
         else:
             if other%1 and (self._v._x<0 or self._v._y<0):
                 raise ValueError(
                     'negative number cannot be raised to a fractional power')
-            return Vector2(self._v._x ** other, self._v._y ** other)
+            return self._v.__class__(self._v._x ** other, self._v._y ** other)
 
     def __mod__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(self._v._x % other._x, self._v._y % other._y)
+            return self._v.__class__(self._v._x % other._x, self._v._y % other._y)
         elif hasattr(other, '__iter__'):
-            return Vector2(self._v._x % other[0], self._v._y % other[1])    # __:opov
+            return self._v.__class__(self._v._x % other[0], self._v._y % other[1])    # __:opov
         else:
-            return Vector2(self._v._x % other, self._v._y % other)
+            return self._v.__class__(self._v._x % other, self._v._y % other)
 
     def __eq__(self, other):
         if hasattr(other, '_x'):
@@ -795,76 +800,76 @@ class VectorElementwiseProxy:
 
     def __radd__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(self._v._x + other._x, self._v._y + other._y)
+            return self._v.__class__(self._v._x + other._x, self._v._y + other._y)
         elif hasattr(other, '__iter__'):
-            return Vector2(self._v._x + other[0], self._v._y + other[1])    # __:opov
+            return self._v.__class__(self._v._x + other[0], self._v._y + other[1])    # __:opov
         else:
-            return Vector2(self._v._x + other, self._v._y + other)
+            return self._v.__class__(self._v._x + other, self._v._y + other)
 
     def __rsub__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(other._x - self._v._x, other._y - self._v._y)
+            return self._v.__class__(other._x - self._v._x, other._y - self._v._y)
         elif hasattr(other, '__iter__'):
-            return Vector2(other[0] - self._v._x, other[1] - self._v._y)    # __:opov
+            return self._v.__class__(other[0] - self._v._x, other[1] - self._v._y)    # __:opov
         else:
-            return Vector2(other - self._v._x, other - self._v._y)
+            return self._v.__class__(other - self._v._x, other - self._v._y)
 
     def __rmul__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(self._v._x * other._x, self._v._y * other._y)
+            return self._v.__class__(self._v._x * other._x, self._v._y * other._y)
         elif hasattr(other, '__iter__'):
-            return Vector2(self._v._x * other[0], self._v._y * other[1])    # __:opov
+            return self._v.__class__(self._v._x * other[0], self._v._y * other[1])    # __:opov
         else:
-            return Vector2(self._v._x * other, self._v._y * other)
+            return self._v.__class__(self._v._x * other, self._v._y * other)
 
     def __rdiv__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(other._x / self._v._x, other._y / self._v._y)
+            return self._v.__class__(other._x / self._v._x, other._y / self._v._y)
         elif hasattr(other, '__iter__'):
-            return Vector2(other[0] / self._v._x, other[1] / self._v._y)    # __:opov
+            return self._v.__class__(other[0] / self._v._x, other[1] / self._v._y)    # __:opov
         else:
-            return Vector2(other / self._v._x, other / self._v._y)
+            return self._v.__class__(other / self._v._x, other / self._v._y)
 
     def __rtruediv__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(other._x / self._v._x, other._y / self._v._y)
+            return self._v.__class__(other._x / self._v._x, other._y / self._v._y)
         elif hasattr(other, '__iter__'):
-            return Vector2(other[0] / self._v._x, other[1] / self._v._y)    # __:opov
+            return self._v.__class__(other[0] / self._v._x, other[1] / self._v._y)    # __:opov
         else:
-            return Vector2(other / self._v._x, other / self._v._y)
+            return self._v.__class__(other / self._v._x, other / self._v._y)
 
     def __rfloordiv__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(floor(other._x/self._v._x), floor(other._y/self._v._y))
+            return self._v.__class__(floor(other._x/self._v._x), floor(other._y/self._v._y))
         elif hasattr(other, '__iter__'):
-            return Vector2(floor(other[0]/self._v._x), floor(other[1]/self._v._y))    # __:opov
+            return self._v.__class__(floor(other[0]/self._v._x), floor(other[1]/self._v._y))    # __:opov
         else:
-            return Vector2(floor(other/self._v._x), floor(other/self._v._y))
+            return self._v.__class__(floor(other/self._v._x), floor(other/self._v._y))
 
     def __rpow__(self, other):
         if hasattr(other, '_x'):
             if (other._x<0 and self._v._x%1) or (other._y<0 and self._v._y%1):
                 raise ValueError(
                     'negative number cannot be raised to a fractional power')
-            return Vector2(other._x ** self._v._x, other._y ** self._v._y)
+            return self._v.__class__(other._x ** self._v._x, other._y ** self._v._y)
         elif hasattr(other, '__iter__'):
             # __pragma__ ('opov')
             if (other[0]<0 and self._v._x%1) or (other[1]<0 and self._v._y%1):
                 raise ValueError(
                     'negative number cannot be raised to a fractional power')
-            return Vector2(other[0] ** self._v._x, other[1] ** self._v._y)
+            return self._v.__class__(other[0] ** self._v._x, other[1] ** self._v._y)
             # __pragma__ ('noopov')
         else:
             if other<0 and (self._v._x%1 or self._v._y%1):
                 raise ValueError(
                     'negative number cannot be raised to a fractional power')
-            return Vector2(other ** self._v._x, other ** self._v._y)
+            return self._v.__class__(other ** self._v._x, other ** self._v._y)
 
     def __rmod__(self, other):
         if hasattr(other, '_x'):
-            return Vector2(other._x % self._v._x, other._y % self._v._y)
+            return self._v.__class__(other._x % self._v._x, other._y % self._v._y)
         elif hasattr(other, '__iter__'):
-            return Vector2(other[0] % self._v._x, other[1] % self._v._y)    # __:opov
+            return self._v.__class__(other[0] % self._v._x, other[1] % self._v._y)    # __:opov
         else:
-            return Vector2(other % self._v._x, other % self._v._y)
+            return self._v.__class__(other % self._v._x, other % self._v._y)
 
